--- a/css/styles.css
+++ b/css/styles.css
@@ -29,3 +29,42 @@ main {
 .section-info__button {
   flex-direction: row;
 }
+
+.main-article__images {
+  display: flex;
+}
+
+.main-article__images ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.main-article__images__hover {
+  display: flex;
+  position: relative;
+}
+
+.main-article__images__hover li {
+  display: block;
+  width: 200px;
+  height: 200px;
+}
+
+.main-article__images__hover h2 {
+  position: absolute;
+  align-content: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0.5rem;
+  margin: 0;
+  background-color: rgba(139, 68, 68, 0.8);
+  color: #fff;
+  opacity: 0;
+}
+
+.main-article__images__hover:hover h2 {
+  opacity: 0.5;
+}
