--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ main {
 
 .main-article__images {
   display: flex;
+  justify-content: center;
 }
 
 .main-article__images ul {
@@ -44,12 +45,15 @@ main {
 .main-article__images__hover {
   display: flex;
   position: relative;
+  margin-right: 1rem;
 }
 
 .main-article__images__hover li {
   display: block;
   width: 200px;
   height: 200px;
+  border-radius: 20%;
+  overflow: hidden;
 }
 
 .main-article__images__hover h2 {
@@ -58,13 +62,20 @@ main {
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 0.5rem;
   margin: 0;
+  padding: 0.5rem;
   background-color: rgba(139, 68, 68, 0.8);
   color: #fff;
   opacity: 0;
 }
 
 .main-article__images__hover:hover h2 {
-  opacity: 0.5;
+  opacity: 1;
+}
+
+.main-article__images__hover img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
