Add size and color to titles

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,17 @@ main {
   padding: 2.5rem;
 }
 
+.section-info__title__firsttitle {
+  font-weight: 600;
+  color: rgb(220, 108, 10);
+  font-size: 1rem;
+}
+
+.section-info__title__secondtitle {
+  font-weight: 1000;
+  font-size: 3rem;
+}
+
 .section-info {
   display: flex;
   justify-content: space-between;
