--- a/css/styles.css
+++ b/css/styles.css
@@ -45,10 +45,15 @@ main {
 
 .section-info__button {
   flex-direction: row;
+  border: none;
+  border-radius: 8px;
+  background-color: rgb(220, 108, 10);
+  color: white;
+  padding: 0.8rem;
+  cursor: pointer;
 }
 
 .main-article__images {
-  /* flex-grow: 1; */
   display: flex;
   justify-content: center;
 }
